--- a/css/repsite.css
+++ b/css/repsite.css
@@ -434,6 +434,7 @@ h1 {
 
 #info-grid p {
     text-align: center;
+    max-width: 80%;
     padding: 1rem;
     margin: 0.5rem 0;
     font-size: larger;
