--- a/css/repsite.css
+++ b/css/repsite.css
@@ -131,7 +131,7 @@ h1 {
     }
 
     #contact-icon {
-        width: 2.5rem;
+        width: 2.25rem;
     }
 
     #contacts {
@@ -470,9 +470,9 @@ h1 {
 
 /* Program table */
 .program-title {
-    width: 100%;
+    width: 90%;
     text-align: center;
-    margin-top: 1.5rem;
+    margin: 1.5rem auto 0 auto;
 }
 
 table {
@@ -542,6 +542,12 @@ tbody tr:hover td {
 
 .form-btn button a:hover {
     text-decoration: underline;
+}
+
+.table-wrapper {
+    overflow: auto;
+    padding: 2px;
+    margin-bottom: 0.5rem;
 }
 
 /* Reviews carousel */
@@ -811,6 +817,7 @@ footer {
     height: 4rem;
     background-color: rgb(84, 151, 84);
     margin-top: 32rem;
+    margin: 0 1.5rem 0 auto;
 }
 
 #footer-form {
@@ -819,31 +826,63 @@ footer {
     height: 4rem;
     background-color: rgb(84, 151, 84);
     margin-top: 67rem;
+    margin: 0 1.5rem 0 auto;
+}
+
+.footer-container {
+    display: flex;
+    align-items: center;
+    margin: 0 1.5rem 0 auto;
+    align-items: center;
+    justify-content: right;
+    gap: 1.5rem;
+}
+
+.footer-container .contact-icon:hover {
+    transform: scale(1.2);
+}
+
+.contact-reveal {
+    position: relative;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.contact-text {
+    max-width: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    opacity: 0;
+    margin-left: 0;
+    transition: all 0.3s ease;
+    color: rgb(255, 248, 248);
+    font-size: larger;
+}
+
+.contact-reveal.active .contact-text,
+.contact-reveal:hover .contact-text {
+    max-width: 348px;
+    opacity: 1;
+    margin-left: 0.5rem;
+}
+
+.footer-icon {
+    width: 3rem;
+    height: auto;
+    transition: all 0.3s ease;
+}
+
+.footer-icon:hover {
+    transform: scale(1.2);
 }
 
 #footer-container {
     display: flex;
     margin: 0 1rem 0 auto;
-    gap: 1rem;
-}
-
-.footer-icon {
-    width: 3.5rem;
-    height: auto;
-}
-
-#online, #offline {    
-    display: flex;
-    max-width: 400px;
     align-items: center;
     justify-content: right;
     gap: 1rem;
-}
-
-#online p, #offline p {
-    display: block;
-    text-align: center;
-    margin-top: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -855,15 +894,28 @@ footer {
         margin-top: 69rem;
     }
 
-    #footer-container {
-        flex-direction: column;
+    .footer-container {
         justify-content: center;
         align-items: center;
-        gap: 0.2rem;
+        gap: 0.5rem;
         margin: 0 auto;
     }
 
+    .footer-contacts {
+        display: flex;
+        align-items: space-around;
+        gap: 1rem;
+        margin: 0 auto;
+    }
     .footer-icon {
         width: 2.5rem;
-    }    
+    }
+
+    .contact-text {
+        font-size: 0.85rem;
+    }
+
+    .contact-reveal.active .contact-text {
+        max-width: 70vw;
+    }  
 }
