--- a/css/repsite.css
+++ b/css/repsite.css
@@ -817,16 +817,18 @@ footer {
     height: 4rem;
     background-color: rgb(84, 151, 84);
     margin-top: 32rem;
-    margin: 0 1.5rem 0 auto;
 }
 
 #footer-form {
-    display: flex;
+    display: block;
     width: 100%;
     height: 4rem;
     background-color: rgb(84, 151, 84);
     margin-top: 67rem;
-    margin: 0 1.5rem 0 auto;
+}
+
+#footer-form .footer-container {
+    padding-top: 0.5rem;
 }
 
 .footer-container {
