--- a/css/repsite.css
+++ b/css/repsite.css
@@ -824,7 +824,7 @@ footer {
     width: 100%;
     height: 4rem;
     background-color: rgb(84, 151, 84);
-    margin-top: 67rem;
+    margin-top: 67rem !important;
 }
 
 #footer-form .footer-container {
