--- a/css/repsite.css
+++ b/css/repsite.css
@@ -836,7 +836,6 @@ footer {
     width: 100%;
     height: 4rem;
     background-color: rgb(84, 151, 84);
-    /* margin-top: 32rem; */
 }
 
 #footer-form {
@@ -844,7 +843,6 @@ footer {
     width: 100%;
     height: 4rem;
     background-color: rgb(84, 151, 84);
-    /* margin-top: 67rem; */
 }
 
 #footer-form .footer-container {
@@ -899,32 +897,20 @@ footer {
     transform: scale(1.2);
 }
 
-#footer-container {
-    display: flex;
-    margin: 0 1rem 0 auto;
-    align-items: center;
-    justify-content: right;
-    gap: 1rem;
-}
-
 @media (max-width: 768px) {
     footer, #footer-review, #footer-form {
-        height: fit-content;
+        height: 3.5rem;
     }
 
     .footer-container {
-        justify-content: center;
-        align-items: center;
-        gap: 0.5rem;
-        margin: 0 auto;
-    }
-
-    .footer-contacts {
         display: flex;
+        width: 100%;
         align-items: space-around;
         gap: 1rem;
         margin: 0 auto;
+        justify-content: center;
     }
+
     .footer-icon {
         width: 2.5rem;
     }
